--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pythnetwork/pyth-sdk-solidity": "^4.2.0",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "next": "15.2.3",
