--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     {
       "path": "/api/execute",
       "schedule": "*/3 * * * *"
+    },
+    {
+      "path": "/api/updatePrice",
+      "schedule": "* * * * *"
     }
   ]
 }
